fixed the spacing in the about me box as well as changed some styling of the about me box

--- a/main_portfolio/src/components/aboutme/style.css
+++ b/main_portfolio/src/components/aboutme/style.css
@@ -18,7 +18,7 @@
 }
 
 #aboutmeTxtBox {
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
     border: solid 3px black;
     margin-top: 20px;
 }
@@ -26,4 +26,5 @@
 #aboutmeInfoTxt {
     font-family: 'Exo', sans-serif;
     margin: 5px;
+    margin-left: 10px;
 }
