--- a/main_portfolio/src/components/linksbox/style.css
+++ b/main_portfolio/src/components/linksbox/style.css
@@ -1,7 +1,8 @@
 #linksBoxCard {
     border: 0px;
     width: 100%;
-    /* height: 75px; */
-    margin-top: 20px;
+    margin-top: 45px;
+    margin-bottom: 10px;
     align-items: center;
+    
 }
