--- a/main_portfolio/src/components/resumeandcontact/style.css
+++ b/main_portfolio/src/components/resumeandcontact/style.css
@@ -1,8 +1,11 @@
 .resAndContactBtn {
     width: 100%;
+    height: 50px;
+    margin-top: 10px;
 }
 
 #resAndContactCard {
     margin-top: 20px;
     border: 0px;
+    font-family: 'Exo', sans-serif;
 }
