--- a/main_portfolio/src/components/skillscard/style.css
+++ b/main_portfolio/src/components/skillscard/style.css
@@ -2,4 +2,9 @@
     border: solid black 3px;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-family: 'Exo', sans-serif;
+}
+
+.skillsCardBox {
+    border: 0px;
 }
